--- a/styles/style.css
+++ b/styles/style.css
@@ -184,6 +184,76 @@ header {
     animation: fadeInDown 0.25s forwards;
     /* transform: translateY(0); */
 }
+/* end header and navbar */
+
+/* start banner */
+.banner {
+    width: 1170px;
+    padding: 124px 60px 80px;
+    background-image: linear-gradient(135deg, #21254e, #2b4a83);
+    border-radius: 20px;
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.banner-text h3 {
+    font-family: 'YekanBakhHeavy';
+    font-size: 2rem;
+    color: #ffffff;
+}
+.banner-text p {
+    color: #ffffff;
+    font-size: 1.15rem;
+    margin: 25px 0;
+    line-height: 2.5rem;
+}
+
+.banner-button {
+    margin-top: 60px;
+}
+.register, .login {
+    font-size: 1rem;
+    font-family: 'YekanBakhBold';
+    padding: 6px 14px;
+    border: none;
+    border-radius: 10px;
+    text-decoration: none;
+}
+.register {
+    color: #000000;
+    background-color: #ffd900;
+    margin-left: 10px;
+}
+.login {
+    color: #ffffff;
+    background-color: #435a8a;
+}
+
+.banner-image img {
+    width: 500px;
+}
+
+.go-down {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    bottom: 58px;
+}
+.go-down div {
+    background-image: url(../images/arrowbottom.svg);
+    width: 164px;
+    height: 78px;
+}
+.go-down img {
+    width: 15px;
+    position: relative;
+    top: -60px;
+}
+/* end banner */
 
 /* start keyframes */
 @keyframes fadeInDown {
